compiler/tests/sct-checker/fail/functions.jazz
inline fn leak(#public reg u64 c) { if c != 0 {} }

u8[6] g = "jasmin";

fn call_kills_msf(#transient reg u64 c) -> #public reg u64 {
  reg u64 m x;
  m = #init_msf();
  x = g[u64 (int) c];
  leak(0);
  x = #protect(x, m);
  return x;
}
